Colab を使用して作成されました (冒頭に説明を追加)

--- a/reservoir_computing.ipynb
+++ b/reservoir_computing.ipynb
@@ -12,7 +12,7 @@
         "PTCYjmn81Y9E"
       ],
       "mount_file_id": "1c_tttduPZE_1j2xlAO7FBCS1_sdVNC99",
-      "authorship_tag": "ABX9TyNzN1ImKsCfScBFZCluJBVN",
+      "authorship_tag": "ABX9TyP3vxf7ONGj9SbpAT5zY/J3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,6 +33,28 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/Mizuki-OHASHI/notebooks/blob/main/reservoir_computing.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# リザバーコンピューティングの実装\n",
+        "\n",
+        "### リザバーコンピューティングとは\n",
+        "\n",
+        "リザバーコンピューティング (Reservoir Computing) は、**時間的なデータの処理に適したニューラルネットワークの一種**です。特に、時系列予測や動的システムのモデリングに強みを持ちます。\n",
+        "\n",
+        "この手法では、中間層（**リザバー**）にランダムに結線された多数のノードを用い、その重みは**訓練せず固定**のまま使用します。**学習が必要なのは出力層のみ**であるため、学習が非常に高速かつ軽量です。\n",
+        "\n",
+        "### 主な特徴\n",
+        "\n",
+        "- **軽量かつ高速な学習**：重みを更新するのは出力層のみ。\n",
+        "- **非線形時系列の処理に強い**：リザバー内の動的な振る舞いが、複雑な時系列パターンを表現可能にする。\n",
+        "- **リカレントニューラルネットワーク (RNN) の一種**：ただし学習の安定性や実装の容易さにおいて優位。\n",
+        "- **ハードウェア実装とも親和性が高い**：アナログ回路や物理システムをリザバーとして利用する研究もある。\n"
+      ],
+      "metadata": {
+        "id": "PDt9mFuF2Kof"
+      }
     },
     {
       "cell_type": "code",
